# emed_utilities

./: .env.example  .gitignore  README.md  pyproject.toml
emed_utilities/: __init__.py
emed_utilities/analytics/: __init__.py  ga4.py
emed_utilities/config/: settings.py
emed_utilities/db/: __init__.py  connection.py
emed_utilities/logging_config/: logger.py
emed_utilities/queries/: conferences.py
scripts/add_event_workflow/: eMedEvents — Organizer Workflow Architecture v1.1.html  eMedEvents_Organizer_Flow_v1.html
scripts/analytics/: analyze_weekly_platform.py  check_ga4_events.py  collect_weekly_platform.py  weekly_monday_run.py
scripts/conferences/: enrich_ga_csv.py  export_active_organizations.py
scripts/one_time_scripts/: block_conferences_audit_dryrun_20260422_054007.csv  block_conferences_audit_dryrun_20260422_054305.csv  block_conferences_audit_dryrun_20260506_013703.csv  block_conferences_audit_executed_20260422_054134.csv  block_conferences_audit_executed_20260422_054350.csv  block_conferences_audit_executed_20260506_014342.csv  block_organizer_conferences.py  blocked_organizer_conferences.csv  count_subscribers_by_specialty.py
scripts/providers/: accme_providers.csv  accme_providers_enriched.csv  lookup_accme_providers.py
scripts/waf_check/: README.md  analyze_logs.py  check_waf.py  common.py  hcp_data_exposure.py  probe_newsletter.py  pull_exposed_api.py  scrape_via_ui.py  test1_user_agent_detection.py  test2_rate_limiting.py  test3_pagination_scrape.py  test4_headless_browser_scrape.py  (+2 more)
tests/: test_config.py  test_db.py
(+3 files in other folders)
